--- a/Controlling-Program-Flow.Reports/ControllingProgramFlow.Reports.csproj
+++ b/Controlling-Program-Flow.Reports/ControllingProgramFlow.Reports.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>ControllingProgramFlow.Reports</RootNamespace>
     <AssemblyName>ControllingProgramFlow.Reports</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+	<LangVersion>9.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -34,16 +35,27 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="WiredBrainCoffeeSurveys.Reports.csproj" />
+    <None Include="Data\Q2.json" />
+    <None Include="Data\Q1.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SurveyResponse.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Q1Results.cs" />
+    <Compile Include="SurveyResults.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SurveyExample.html" />
     <Content Include="wired-brain-coffee-logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
